--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.2.0"
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "vuepress": "^1.7.1"
   }
 }
